# stellar-whisper

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  HACKATHON_SUBMISSION.md  MyResearch.txt  README.md  liquidity_pools_walkthrough.md  package-lock.json  package.json
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
contracts/verifier/src/ultrahonk/: debug.rs  ec.rs  mod.rs  relations.rs  shplemini.rs  sumcheck.rs  transcript.rs  types.rs  utils.rs  verifier.rs
contracts/whisper/: Cargo.toml
contracts/whisper/src/: lib.rs  test.rs
contracts/whisper/test_snapshots/test/: test_oracle_sanctions_updates.1.json  test_public_liquidity_provision.1.json  test_whisper_double_spend.1.json  test_whisper_duplicate_deposit_commitment.1.json  test_whisper_failed_token_transfer_rollback.1.json  test_whisper_flow.1.json  test_whisper_invalid_merkle_root.1.json  test_whisper_invalid_proof.1.json  test_whisper_public_withdraw_with_change.1.json  test_whisper_public_withdraw_with_non_zero_output_commitments.1.json  test_whisper_sanctioned_address_deposit_rejected.1.json  test_whisper_sanctioned_address_withdraw_rejected.1.json  test_whisper_shielded_swap.1.json  test_whisper_shielded_transfer.1.json  test_whisper_shielded_transfer_mismatched_new_commitments.1.json  test_whisper_shielded_transfer_with_non_zero_public_withdraw_amount.1.json  test_whisper_tree_full.1.json  test_whisper_with_real_verifier.1.json
design-system/: compliance.html  dashboard.html  shielding.html  transfer.html
docs/: CIRCUITS.md  DEPLOYMENT.md  FAQ.md  FRONTEND.md  INDEXER.md  (+4 more)
(+51 files in other folders)
