[package]
name = "verifier"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc", "hazmat-crypto"] }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = ["trace"]
std = []
trace = []
